--- a/_config.yml
+++ b/_config.yml
@@ -138,9 +138,9 @@ related_blog_posts:
 # Follow instructions on https://giscus.app/ to setup for your repo to fill out the information below.
 giscus:
   repo: kgoel59/kgoel59.github.io
-  repo_id: # leave empty or specify your repo_id (see https://giscus.app/)
-  category: Comments # name of the category under which discussions will be created
-  category_id: # leave empty or specify your category_id (see https://giscus.app/)
+  repo_id: R_kgDOLGCvFA
+  category: Q&A
+  category_id: DIC_kwDOLGCvFM4CcfRJ
   mapping: title # identify discussions by post title
   strict: 1 # use strict identification mode
   reactions_enabled: 1 # enable (1) or disable (0) emoji reactions
