--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 github_username: kgoel59
 gitlab_username: # your GitLab user name
-x_username: kgoel59
+x_username: #
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: kg59
 telegram_username: # your Telegram user name
